JwInf CSS: Make text selectable

--- a/pemFioi/jwinf.css
+++ b/pemFioi/jwinf.css
@@ -12,3 +12,10 @@
 img.beaver {
     content:url("../img/jwinf-fox.jpg");
 }
+
+* {
+  -moz-user-select: text;
+  -webkit-user-select: text;
+  -ms-user-select: text;
+  user-select: auto;
+}
