--- a/pemFioi/quickAlgo/quickAlgo.css
+++ b/pemFioi/quickAlgo/quickAlgo.css
@@ -191,6 +191,7 @@ input[type=button] {
 
 /* Save or load Modal */
 #saveOrLoadModal {
+    z-index: 100;
 	position: absolute;
 	top: 0;
 	right: 0;
