--- a/pemFioi/blockly_lib.css
+++ b/pemFioi/blockly_lib.css
@@ -161,8 +161,10 @@ input[type=button] {
 	margin-bottom: 5px;
 }
 
-/* Save or load Modal */
-#saveOrLoadModal {
+/* Modal popup */
+.modalWrapper {
+    display: none;
+    z-index: 100;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -172,7 +174,7 @@ input[type=button] {
 	background-color: rgba(0,0,0,0.7);
 	transition: all 250ms;
 }
-#saveOrLoadModal .modal {
+.modalWrapper .modal {
 	width: 800px;
 	margin: 0 auto;
 	background: #fff;
@@ -181,7 +183,7 @@ input[type=button] {
 	padding: 20px;
 	position: relative;
 }
-#saveOrLoadModal .btn.close {
+.modalWrapper .btn.close {
 	border: none;
 	font-weight: bold;
 	font-size: 24px;
