put beaver on the left to fix rtl issue

--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -282,6 +282,7 @@ h1 .stars {
 #popupMessage img.beaver {
    position: absolute;
    width: 90px;
+   left: 0px;
 }
 #popupMessage img.messageArrow {
    position: absolute;
