JWINF CSS: Add <samp> style for sample output

--- a/pemFioi/jwinf.css
+++ b/pemFioi/jwinf.css
@@ -27,3 +27,13 @@ code {
   padding: 0px 2px;
   margin: 0px 2px;
 }
+
+
+samp::before { 
+    content: "„";
+}
+
+samp::after { 
+    content: "“";
+}
+
