--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -148,6 +148,16 @@ textarea {
    border: 2px solid black; 
    border-radius: 6px;
  }
+
+#miniPlatformHeader {
+   width:100%;
+   border-bottom:1px solid #B47238;
+   overflow:hidden;
+}
+#miniPlatformHeader > table {
+   width:770px;
+   margin: auto;
+}
 #task h1,
 .question h1,
 #solution {
