--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -25,16 +25,59 @@ body > * {
   float: right;
 }
 
+#editorMenu {
+  position: absolute;
+  right: 80px;
+  top: 30px;
+  z-index: 99;
+  display: none;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
+}
+
+
+#editorMenu div {
+  cursor: pointer;
+  background: #282828;
+  color: #F5F5F5;
+  padding: 10px 20px;
+  border-bottom: 1px solid #717171;
+  position: relative;
+}
+
+#editorMenu #saveUrl {
+  display: none;
+}
+
+#editorMenu div:last-child {
+  border: 0;
+}
+
+#editorMenu div:hover {
+  background: #F5F5F5;
+  color: #282828;
+}
+
+
+#editorMenu input[type=file] {
+  cursor: pointer;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  -moz-opacity: 0;
+  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+}
+
 #fullscreenButton {
   float: right;
 }
 
-#editorMenu {
-  position: absolute;
-  right: 0;
-  top: 30px;
-  z-index: 100;
+#displayHelpBtn {
+  float: right;
 }
+
+
+
 
 .scaleDrawingControl {
     display: none;
