--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -140,12 +140,12 @@ textarea {
    text-align: center;
 }
 
-.warningHeader { 
-   margin: 10px 0px 10px 0px; 
-   padding: 10px 10px 10px 10px; 
-   background: #FFEEEE; 
+.warningHeader {
+   margin: 10px 0px 10px 0px;
+   padding: 10px 10px 10px 10px;
+   background: #FFEEEE;
    /*font-weight: bold;*/
-   border: 2px solid black; 
+   border: 2px solid black;
    border-radius: 6px;
  }
 
@@ -157,6 +157,9 @@ textarea {
 #miniPlatformHeader > table {
    width:770px;
    margin: auto;
+}
+#miniPlatformHeader .platform {
+    font-size: 32px;
 }
 #task h1,
 .question h1,
@@ -223,7 +226,7 @@ textarea {
    display: block;
    padding: 8px;
    color: #000;
-   text-decoration: none; 
+   text-decoration: none;
    font-size: 1.1em;
 }
 #tabsMenu .li.lockedLevel a {
