--- a/pemFioi/taskStyles-mobileFirst.css
+++ b/pemFioi/taskStyles-mobileFirst.css
@@ -33,9 +33,9 @@ img {
   margin: 0;
   vertical-align: top;
 }
-
-
-
+#miniPlatformHeader .platform {
+  font-size: 32px;
+}
 
 #tabsContainer {
 }
@@ -109,6 +109,56 @@ img {
 }
 
 
+.icon {
+  background: url('../../img/icons.png') no-repeat;
+  height: 36px;
+  cursor: pointer;
+}
+
+
+/* playback */
+#playerControls {
+  height: 36px;
+  margin-top: 2px;
+}
+
+#playerControls .icon {
+  float: left;
+  margin-right: 9px;
+
+}
+
+#playerControls .icon:last-child {
+  margin: 0;
+}
+
+#playerControls .stop {
+  background-position: 0 0;
+  width: 42px;
+}
+
+#playerControls .play {
+  background-position: -58px 0;
+  width: 35px;
+}
+
+#playerControls .pause {
+  background-position: -197px 0;
+  width: 35px;
+}
+
+#playerControls .step {
+  background-position: -105px 0;
+  width: 30px;
+}
+
+#playerControls .end {
+  background-position: -147px 0;
+  width: 44px;
+}
+
+
+/* speed slider  */
 .speedSlider {
   position: relative;
   height: 40px;
@@ -178,9 +228,7 @@ img {
   height: 100%;
   overflow: auto;
 }
-.mode-instructions #gridContainer {
-  width: 410px;
-}
+
 
 
 
@@ -190,37 +238,21 @@ img {
 }
 
 .mode-player #introGrid {
-  left: 0;
-  width: 420px;
-  top: 0;
-  bottom: 0;
   position: absolute;
 }
 
 .mode-player #taskIntro {
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 370px;
   overflow: auto;
 }
 
 .mode-player #gridContainer {
   position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 60px;
-  height: 290px;
 }
 
 
 .mode-player .speedControls {
   position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 420px;
-  height: 50px;
 }
 
 
@@ -237,10 +269,6 @@ img {
 
 .mode-player #blocklyLibContent {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 420px;
-  right: 0;
 }
 
 
@@ -255,16 +283,35 @@ img {
 
 
 
-
-
 #modeSelector {
-  background-color: #fff;
-  box-shadow: 3px 3px 8px #333;
   position: fixed;
-  bottom: 3px;
-  right: 3px;
-  padding: 10px;
+  bottom: 0;
+  right: 0;
+  padding: 7px;
+  background: #fff;
 }
+
+#modeSelector div {
+  float: left;
+}
+
+#modeSelector #mode-editor {
+  background-position: -323px 0;
+  width: 36px;
+}
+
+#modeSelector #mode-player {
+  background-position: -361px 0;
+  width: 36px;
+}
+
+#modeSelector #mode-instructions {
+  background-position: -284px 0;
+  width: 36px;
+}
+
+
+
 
 #popupMessage {
    display: none;
@@ -329,38 +376,83 @@ img {
 
 @media screen and (orientation: landscape) { /* horizontal screen layout */
 
+  .mode-player #introGrid {
+    left: 0;
+    width: 420px;
+    top: 0;
+    height: 100%;
+  }
 
-/*
-  .mode-instructions #taskContent {
-    flex-direction: row;
-  }
-  .mode-instructions #gridContainer {
-    flex: 0 0 400px;
-    align-self: center;
-  }
-  .mode-instructions #gridContainer > * {
-  }
-  .mode-player #introGrid {
-    flex-direction: column;
-  }
-  .mode-player #taskContent {
-    flex-direction: row;
-  }
-  .mode-player #introGrid {
-    flex-direction: column;
-    flex: 0 0 40vh;
-  }
   .mode-player #taskIntro {
-    flex: 0 0 20vh;
-    overflow: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 370px;
   }
+
   .mode-player #gridContainer {
-    align-self: center;
+    left: 0;
+    width: 100%;
+    bottom: 60px;
+    height: 290px;
   }
-  */
+
+  .mode-player #blocklyLibContent {
+    top: 0;
+    bottom: 0;
+    left: 420px;
+    right: 0;
+  }
+
+  .mode-player .speedControls {
+    left: 0;
+    bottom: 0;
+    width: 420px;
+    height: 50px;
+  }
+
+  .mode-instructions #gridContainer {
+    width: 410px;
+  }
+
 }
 
+
 @media screen and (orientation: portrait) { /* vertical screen layout */
+
+  .mode-player #introGrid {
+    width: 100%;
+    height: 420px;
+  }
+
+
+  .mode-player #taskIntro {
+    left: 0;
+    right: 420px;
+    top: 0;
+    height: 360px;
+  }
+
+  .mode-player #gridContainer {
+    width: 420px;
+    right: 0;
+    top: 0;
+    height: 100%;
+  }
+
+  .mode-player #blocklyLibContent {
+    top: 420px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+  .mode-player .speedControls {
+    left: 0;
+    top: 440px;
+    right: 420px;
+  }
+
 
   .mode-instructions #gridContainer {
     top: 0;
@@ -378,50 +470,68 @@ img {
     height: auto;
   }
 
+  .mode-instructions #gridContainer {
+    margin: 0 auto;
+  }
 
-/*
-  body #task {
-    padding: 0;
-    margin: 0;
-  }
-  .mode-instructions #taskIntro {
-    width: 100vw;
-  }
-  .mode-instructions #introGrid {
-    flex-direction: column;
-  }
-  .mode-player #taskContent {
-    flex-direction: column;
-  }
-  .mode-player #introGrid {
-    flex-direction: row;
-    flex: 0 0 30vh;
-  }
-  .mode-player #taskIntro {
-    max-height: 100%;
-    overflow: auto;
-    flex: 0 1 33vw;
-  }
-  */
 }
-@media screen and (max-width: 480px) {
-  /*
+
+
+
+@media screen and (max-width: 800px) {
+  .mode-player #taskIntro {
+    display: none;
+  }
+
+  .mode-player #gridContainer {
+    top: 0;
+  }
+}
+
+
+
+@media screen and (max-width: 600px) {
+
   #miniPlatformHeader h1 {
+    font-size: 12px;
+  }
+
+  #miniPlatformHeader .platform {
     font-size: 16px;
-    line-height: 1;
   }
-  #miniPlatformHeader * {
-   font-size: 16px !important;
-  }
+
   .mode-player #taskIntro {
-    display: none;
+    height: 320px;
   }
-  */
+
+  .mode-player .speedControls {
+    top: 400px;
+  }
 }
-@media screen and (max-height: 480px) {
-  /*
-  .mode-player #taskIntro {
-    display: none;
+
+@media screen and (max-width: 480px) {
+
+  #miniPlatformHeader  {
+    font-size: 10px;
   }
-  */
+
+  .mode-player #introGrid {
+    height: 300px;
+  }
+
+  .mode-player #gridContainer {
+    position: relative;
+    width: 100%;
+  }
+
+  .mode-player #blocklyLibContent {
+    top: 300px;
+    bottom: 55px;
+  }
+
+  .mode-player .speedControls {
+    right: 80px;
+    top: auto;
+    bottom: 5px;
+  }
 }
